# maple-lofi

./: .gitignore  README.md  SPECIFICATION.md  TESTING_GUIDE.md  pyproject.toml
docs/: ARCHITECTURE.md  DEBUGGING.md  PIPELINE_CONTRACT.md
docs/ADRs/: 001-pipeline-architecture.md  002-dataclass-configuration.md  003-ffmpeg-abstraction.md  004-dual-logging-strategy.md
maple_lofi/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
maple_lofi/ffmpeg/: commands.py  probe.py
maple_lofi/logging/: logger.py  manifest.py
maple_lofi/stages/: ingest.py  lofi.py  merge.py  video.py
maple_lofi/utils/: natural_sort.py  validators.py  youtube.py
scripts/: generate_test_audio.sh  make_video.sh
soundweave/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
soundweave/ffmpeg/: __init__.py  commands.py  executor.py  probe.py
soundweave/logging/: __init__.py  logger.py  manifest.py
soundweave/stages/: __init__.py  ingest.py  merge.py  video.py
soundweave/utils/: youtube.py
tests/: __init__.py
